// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render Accordion closed 1`] = `
<div
  class="Accordion"
>
  <div
    class="Accordion-Header"
  >
    <span
      class="Accordion-Chevron"
    >
      <span
        aria-hidden="true"
        class="Icon Icon_direction_bottom Icon_size_xs Icon_type_arrow"
      />
    </span>
    Title
  </div>
  <div
    class="Accordion-Content"
  >
    Content
  </div>
</div>
`;

exports[`Should render Accordion open 1`] = `
<div
  class="Accordion Accordion_open"
>
  <div
    class="Accordion-Header"
  >
    <span
      class="Accordion-Chevron"
    >
      <span
        aria-hidden="true"
        class="Icon Icon_direction_top Icon_size_xs Icon_type_arrow"
      />
    </span>
    Title
  </div>
  <div
    class="Accordion-Content"
  >
    Content
  </div>
</div>
`;

exports[`Should render Accordion with click handlers 1`] = `
<div
  class="Accordion"
>
  <div
    class="Accordion-Header Accordion-Header_clickable"
  >
    <span
      class="Accordion-Chevron Accordion-Chevron_clickable"
    >
      <span
        aria-hidden="true"
        class="Icon Icon_direction_bottom Icon_size_xs Icon_type_arrow"
      />
    </span>
    Title
  </div>
  <div
    class="Accordion-Content Accordion-Content_clickable"
  >
    Content
  </div>
</div>
`;
